src/test/deca/syntax/invalid/lexer/special_char_lex-lex.corr
GT: [@0,201:201='>',<2>,13:0]
LT: [@1,203:203='<',<3>,14:0]
EQUALS: [@2,205:205='=',<4>,15:0]
PLUS: [@3,207:207='+',<5>,16:0]
MINUS: [@4,209:209='-',<6>,17:0]
TIMES: [@5,211:211='*',<7>,18:0]
SLASH: [@6,213:213='/',<8>,19:0]
PERCENT: [@7,215:215='%',<9>,20:0]
DOT: [@8,217:217='.',<10>,21:0]
COMMA: [@9,219:219=',',<11>,22:0]
OPARENT: [@10,221:221='(',<12>,23:0]
CPARENT: [@11,223:223=')',<13>,24:0]
OBRACE: [@12,225:225='{',<14>,25:0]
CBRACE: [@13,227:227='}',<15>,26:0]
EXCLAM: [@14,229:229='!',<16>,27:0]
SEMI: [@15,231:231=';',<17>,28:0]
EQEQ: [@16,233:234='==',<18>,29:0]
NEQ: [@17,236:237='!=',<19>,30:0]
GEQ: [@18,239:240='>=',<20>,31:0]
LEQ: [@19,242:243='<=',<21>,32:0]
AND: [@20,245:246='&&',<22>,33:0]
OR: [@21,248:249='||',<23>,34:0]
DOT: [@22,269:269='.',<10>,37:0]
DOT: [@23,270:270='.',<10>,37:1]
PLUS: [@24,272:272='+',<5>,38:0]
PLUS: [@25,273:273='+',<5>,38:1]
EXCLAM: [@26,275:275='!',<16>,39:0]
PLUS: [@27,276:276='+',<5>,39:1]
OBRACE: [@28,278:278='{',<14>,40:0]
OPARENT: [@29,279:279='(',<12>,40:1]
CBRACE: [@30,280:280='}',<15>,40:2]
CPARENT: [@31,281:281=')',<13>,40:3]
LEQ: [@32,283:284='<=',<21>,41:0]
EQUALS: [@33,285:285='=',<4>,41:2]
TIMES: [@34,286:286='*',<7>,41:3]
